--- a/panier.html
+++ b/panier.html
@@ -30,7 +30,7 @@
                                                            <tr class="flex justify-content"><th>Produit</th><th>couleur</th><th>Quantité</th> <th>Prix</th><th>total</th></tr>   
                                                          </thead>
                                                          <tbody id="listearticle">
-                                                                <tr class="flex justify-content"><th id="name"></th><th id="color"></th><th id="select"></th> <th id="price"></th><th id="total"></th></tr> 
+                                                                <tr class="flex justify-content"></tr> 
                                                          </tbody>
                                                         
                                                  <tfoot id="totalprix" class="flex end"></tfoot>
@@ -48,3 +48,6 @@
                 </div>
         </body>
 </html>
+
+
+<th id="name"></th><th id="color"></th><th id="select"></th> <th id="price"></th><th id="total"></th>
