--- a/article.html
+++ b/article.html
@@ -29,12 +29,12 @@
                                       </div>
                                 
                                       <button id="panier" class="flex items-center border-radius">ajouter au panier</button>
-                                      <section id="petitPanier" class="flex direction">
+                                      <section id="petitPanier" class="flex direction position align-self col-2 color">
                                               <div class="flex direction">
-                                                <table  class="container ml-1">
+                                                <table  class="container ml-1 ">
                                                         <h2 id="h2">votre commande</h2>
                                                         <thead>
-                                                          <tr class="flex justify-content"><th>Produit</th><th>couleur</th><th>Quantité</th> <th>Prix</th><th>total</th></tr>   
+                                                          <!-- <tr class="flex justify-content"><th>Produit</th><th>couleur</th><th>Quantité</th> <th>Prix</th><th>total</th></tr>    -->
                                                         </thead>
                                                         <tbody id="listearticle">
                                                                <tr class="flex justify-content"></tr> 
