--- a/panier.html
+++ b/panier.html
@@ -8,7 +8,7 @@
                 <!-- <meta http-equiv="refresh" content="5"> -->
                 <title>Panier Orinoco, site de e-commerce pour vos peluches</title>
                 <link rel="stylesheet" href="css/accueil.css"/>
-                <script src="js/panier.js" defer></script>
+                
         </head>
         <body>
                 <div class="container bg-1">
@@ -46,7 +46,8 @@
                         </footer>
                 </div>
         </body>
+        <script src="js/panier.js" defer></script>
 </html>
 
-
-<th id="name"></th><th id="color"></th><th id="select"></th> <th id="price"></th><th id="total"></th>
+<!-- 
+<th id="name"></th><th id="color"></th><th id="select"></th> <th id="price"></th><th id="total"></th> -->
