--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
                 <script src="js/index.js" defer></script>
         </head>
         <body>
-                <div class="container bg-1">
-                               <header class="flex justify-content items-center rounded-lg w-full bg py-2 px-6 mt">
+                <div class="container">
+                               <header class="header rounded-lg w-full py-2 px-6">
                                               <a href="index.html">
-                                                      <p><img id="imgNorbert" class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
+                                                      <p><img id="imgNorbert" class="imagelogo" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
                                               </a>
-                                              <nav class="flex">
-                                                      <ul class="list-none font-bold">
+                                              <nav class="lienpanier">
+                                                      <ul class="panier font-bold">
                                                                      <a class="px-4 py-4" href="panier.html">Panier</a>
                                                       </ul>
                                               </nav>
                                </header>
                                <main id="main">
-                                              <div id="produitlist" class="flex col-12 mt-6 justify-content container bg column border-radius" >
+                                              <div id="produitlist" class="produitlist col-12" >
                                                 
                                               </div> 
                                </main>
                                <footer>
-                                       <div class="flex pt-2 bg">
-                                               <p><a class="ml-1 fs-1" href="index.html">Accueil</a> </p>
+                                       <div class="footer">
+                                               <p><a class="accueil" href="index.html">Accueil</a> </p>
                                        </div>
                                </footer>
                 </div>
