--- a/orderstatus.html
+++ b/orderstatus.html
@@ -10,16 +10,16 @@
         </head>
         <body>
                 <div class="container bg-1">
-                               <header class="flex justify-content items-center rounded-lg w-full bg py-2 px-6 mt">
-                                              <a href="index.html">
-                                                      <p><img class="h-20 ml-1 bg" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
-                                              </a>
-                                              <nav class="flex">
-                                                      <ul class="list-none font-bold">
-                                                                     <a class="px-4 py-4" href="panier.html">Panier</a>
-                                                      </ul>
-                                              </nav>
-                               </header>
+                        <header class="header rounded-lg w-full py-2 px-6">
+                                <a href="index.html">
+                                        <p><img id="imgNorbert" class="imagelogo" src="images/logo.jpg" alt="logo de l'entreprise Orinoco"></p>
+                                </a>
+                                <nav class="lienpanier">
+                                        <ul class="panier font-bold">
+                                                       <a class="px-4 py-4" href="panier.html">Panier</a>
+                                        </ul>
+                                </nav>
+                 </header>
                                <main>
                                          <div id="remerciement" class="my-2"></div>
                                          <div id="produit" class="my-2"> </div>
@@ -27,10 +27,10 @@
                                          <div id="adresse" class="my-2"></div>
                                </main>
                                <footer>
-                                             <div class="flex pt-2 bg">
-                                                     <p><a class="ml-1 fs-1" href="orderstatus.html">Haut de la page</a> </p>
-                                             </div>
-                                     </footer>
+                                <div class="footer">
+                                        <p><a class="accueil" href="index.html">Accueil</a> </p>
+                                </div>
+                        </footer>
                 </div>
         </body>
 </html>
