--- a/article.html
+++ b/article.html
@@ -22,12 +22,10 @@
                         </nav>
          </header>
                               <main  class="main" id="main">
-                                      <div id="produitlist" class="produitlist">
-                                       <select id="nomproduit" class="nomproduit">
-                                               
+                                      <div id="produitlist" class="produitliste">
+                                       <select id="nomproduit" class="nomproduit">                                               
                                        </select>
                                       </div>
-                                
                                       <button id="panier" class="panier">ajouter au panier</button>
                                       <section id="petitPanier" class="petitpanier col-2">
                                               <div class="container">
