--- a/orderstatus.html
+++ b/orderstatus.html
@@ -21,10 +21,8 @@
                                 </nav>
                  </header>
                                <main>
-                                         <div id="remerciement" class="my-2"></div>
-                                         <div id="produit" class="my-2"> </div>
-                                         <div id="totalproduit" class="my-2"></div>
-                                         <div id="adresse" class="my-2"></div>
+                                         <div id="remerciement" class="order"></div>
+                                         <div id="totalproduit" class="order"></div>                                         
                                </main>
                                <footer>
                                 <div class="footer">
