--- a/panier.html
+++ b/panier.html
@@ -36,13 +36,12 @@
                                                                 </tr>   
                                                          </thead>
                                                          <tbody id="listearticle">
-                                                                <tr class="flex justify-content"></tr> 
                                                          </tbody>
                                                         
-                                                 <tfoot id="totalprix" class="flex end"></tfoot>
+                                                 <tfoot id="totalprix" class="totalpanier"></tfoot>
                                                  </table> 
                                          </section>
-                                         <section id="formulaire" class="bg mt">                                               
+                                         <section id="formulaire" class="formulaire">                                               
                                          </section>
                                </main>
                                <footer>
